# eika-shell

./: CMakeLists.txt  README.md  main.cpp  make.sh
builtins/: builtins.cpp  builtins.hpp
builtins/alias/: alias.cpp  alias.hpp
builtins/env/: env.cpp  env.hpp
builtins/env/envexec/: envexec.cpp  envexec.hpp
features/alias/: alias.cpp  alias.hpp
features/completion/: completion.cpp  completion.hpp  completion_format.cpp  completion_format.hpp  path_completion.cpp  path_completion.hpp
features/env/: env.cpp  env.hpp
features/expansion/: expansion.cpp  expansion.hpp
features/highlighting/: highlighting.cpp  highlighting.hpp
features/history/: history.cpp  history.hpp
features/shell_text/: shell_text.cpp  shell_text.hpp
parser/: parser.cpp  parser.hpp
parser/assignments/: assignment.cpp  assignment.hpp
parser/internals/: internal.hpp  parse_simple_command.cpp  parse_structure.cpp  tokenize.cpp  tokenize.hpp
process/: process.cpp  process.hpp
shell/: shell.cpp  shell.hpp
shell/exec/: exec.cpp  exec.hpp
shell/input/: README.md  below_prompt_panel.cpp  below_prompt_panel.hpp  completion_menu.cpp  completion_menu.hpp  input.cpp  input.hpp
shell/input/editor_state/: editor_state.cpp  editor_state.hpp
shell/input/key/: character_key.cpp  character_key.hpp  key.cpp  key.hpp
shell/input/panels/: panel.cpp  panel.hpp
shell/input/session_state/: session_state.cpp  (+1 more)
shell/prompt/: README.md  prompt.cpp  prompt.hpp  render_utils.cpp  render_utils.hpp
shell/signals/: signals.cpp  signals.hpp
shell/terminal/: terminal.cpp  terminal.hpp
(+12 files in other folders)
